# bj

./: README.md  pyproject.toml
bj/console/: __init__.py  commands.py
bj/lib/: bitbucket.py  builder.py  jira.py  scenerios.py
tests/: test_bj.py
